// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Can be stacked 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        >
          <button
            class="mdc-tab mdc-tab--stacked"
          >
            <div
              class="mdc-tab__content"
            >
              <span
                class="mdc-tab__text-label"
              >
                Test
              </span>
            </div>
            <span
              class="mdc-tab-indicator"
            >
              <span
                aria-hidden="true"
                class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
              />
            </span>
            <div
              class="mdc-tab__ripple "
            />
            <div
              class="mdc-tab__focus-ring"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs Can have icon 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        >
          <button
            class="mdc-tab"
          >
            <div
              class="mdc-tab__content"
            >
              <i
                class="rmwc-icon rmwc-icon--ligature material-icons mdc-tab__icon"
              >
                favorite
              </i>
              <span
                class="mdc-tab__text-label"
              >
                Test
              </span>
            </div>
            <span
              class="mdc-tab-indicator"
            >
              <span
                aria-hidden="true"
                class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
              />
            </span>
            <div
              class="mdc-tab__ripple "
            />
            <div
              class="mdc-tab__focus-ring"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs Can have label 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        >
          <button
            class="mdc-tab"
          >
            <div
              class="mdc-tab__content"
            >
              <span
                class="mdc-tab__text-label"
              >
                Test
              </span>
            </div>
            <span
              class="mdc-tab-indicator"
            >
              <span
                aria-hidden="true"
                class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
              />
            </span>
            <div
              class="mdc-tab__ripple "
            />
            <div
              class="mdc-tab__focus-ring"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs Can have restrictIndicator 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        >
          <button
            class="mdc-tab"
          >
            <div
              class="mdc-tab__content"
            >
              <i
                class="rmwc-icon rmwc-icon--ligature material-icons mdc-tab__icon"
              >
                favorite
              </i>
              <span
                class="mdc-tab__text-label"
              >
                Test
              </span>
              <span
                class="mdc-tab-indicator"
              >
                <span
                  aria-hidden="true"
                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                />
              </span>
            </div>
            <div
              class="mdc-tab__ripple "
            />
            <div
              class="mdc-tab__focus-ring"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs TabBar renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        >
          <button
            class="mdc-tab"
          >
            <div
              class="mdc-tab__content"
            >
              <span
                class="mdc-tab__text-label"
              >
                Test
              </span>
            </div>
            <span
              class="mdc-tab-indicator"
            >
              <span
                aria-hidden="true"
                class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
              />
            </span>
            <div
              class="mdc-tab__ripple "
            />
            <div
              class="mdc-tab__focus-ring"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs can have no tabs 1`] = `
<DocumentFragment>
  <div
    class="mdc-tab-bar"
    role="tablist"
  >
    <div
      class="mdc-tab-scroller"
    >
      <div
        class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
        style="margin-bottom: 0px;"
      >
        <div
          class="mdc-tab-scroller__scroll-content"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
